--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
-</head>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  </head>
   <body class="bg-white text-black antialiased">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
